[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unreal-api-mcp"
version = "0.3.0"
description = "MCP server providing ground-truth Unreal Engine API documentation -- prevents AI hallucination of signatures, includes, and deprecated APIs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Codeturion", email = "fuatcankoseoglu@gmail.com"},
]
keywords = ["mcp", "mcp-server", "model-context-protocol", "unreal-engine", "ue5", "api", "documentation", "ai", "claude", "cursor", "windsurf", "game-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/Codeturion/unreal-api-mcp"
Repository = "https://github.com/Codeturion/unreal-api-mcp"
Issues = "https://github.com/Codeturion/unreal-api-mcp/issues"

[project.optional-dependencies]
ingest = []

[project.scripts]
unreal-api-mcp = "unreal_api_mcp.server:main"
unreal-api-ingest = "unreal_api_mcp.ingest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unreal_api_mcp"]
exclude = ["*.db", "*.db-shm", "*.db-wal"]
